changed landing page

--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@
 }
 
 .custom-toast{
-  background-color:#FFC107 !important;
+  background-color:white !important;
   color:black !important;
 }
 body, html {
